welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:29: error: not found: value getLargeur
    		setPos(getLargeur, getY+1)
                       ^